kubernetes-manifests/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      dnsConfig:
        nameservers:
        - 169.254.25.10
        options:
        - name: ndots
          value: "1"
        - name: attempts
          value: "2"
        searches:
        - svc.cluster.local
        - ns.svc.cluster.local
      dnsPolicy: None
      containers:
      - image: nginx:latest
        name: nginx
        resources:
          requests:
            cpu: "1m"
status: {}
