kubernetes-manifests/webhook-mutation-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns-mutation-webhook
  labels:
    app: dns-mutation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dns-mutation
  template:
    metadata:
      labels:
        app: dns-mutation
    spec:
      serviceAccountName: dns-mutation-webhook
      containers:
      - name: webhook
        image: ugurozturk99/dnsmutationwebhook:${CI_PIPELINE_ID}
        ports:
        - containerPort: 443
        volumeMounts:
        - mountPath: "/app/properties.yaml"
          name: config
          subPath: "properties.yaml"
        - name: certs-volume
          readOnly: true
          mountPath: "/certs"
        imagePullPolicy: Always
      volumes:
      - name: config
        configMap:
          name: dns-mutation-cm
          items:
          - key: "properties.yaml"
            path: "properties.yaml"
      - name: certs-volume
        secret:
          secretName: dns-admission-tls
