kubernetes-manifests/mutating-webhook-configuration.yml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: dns-mutating-webhook
webhooks:
  - name: dns-mutation.default.svc
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions: ["v1","v1beta1"]
    rules:
      - apiGroups: ["apps", ""]
        resources:
          - "pods"
        apiVersions:
          - "*"
        operations:
          - CREATE
    clientConfig:
      service:
        name: dns-mutation
        namespace: default
        path: /mutate/
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUUrekNDQXVPZ0F3SUJBZ0lVTUVRcllMVE8vbmMxRjdmVjRWaFRobkVHMzhBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0l6RWhNQjhHQTFVRUF3d1laRzV6TFcxMWRHRjBhVzl1TG1SbFptRjFiSFF1YzNaak1CNFhEVEl5TURneQpPREE0TWpRME9Wb1hEVE15TURVeU56QTRNalEwT1Zvd0l6RWhNQjhHQTFVRUF3d1laRzV6TFcxMWRHRjBhVzl1CkxtUmxabUYxYkhRdWMzWmpNSUlDSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQWc4QU1JSUNDZ0tDQWdFQTJPajMKSWdTclVwS3J1TmYzUWh2WTdqZFFnNDZKTEh2T0EwRGtvVVVFSEIrL29sTENuZzI2MVRSS0J4bXkwTGk3MmRnbQpSdlBuZWhYTzBa [...]
